2007-10-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add missing file

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* DontDeclareProtectedFieldsInSealedClassTest.cs: Unit tests (Nidhi 
	Rawal, GSoC 2007)
	* UsingCloneWithoutImplementingICloneableTest.cs: Unit tests (Nidhi 
	Rawal, GSoC 2007)
	* Test.Rules.Design.mdp: New. Project file for MonoDevelop.